Chore: GCP 키 파일 gcs-key.json을 .gitignore에 추가

--- a/.gitignore
+++ b/.gitignore
@@ -39,6 +39,7 @@ build/
 *.yaml
 src/main/resources/application.yml
 src/main/resources/application.properties
+src/main/resources/gcs-key.json
 
 # MyBatis XML 컴파일 결과물
 *.xml~
