--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,13 @@
 			<version>1.43.3</version>
 		</dependency>
 
+		<!-- GCS -->
+		<dependency>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-storage</artifactId>
+			<version>2.44.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
