--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      - name: Set up Docker Buildx
+      - name: Set up Dockerfile Buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Authenticate with Google Cloud
@@ -36,10 +36,10 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
-      - name: Configure Docker for Artifact Registry
+      - name: Configure Dockerfile for Artifact Registry
         run: gcloud auth configure-docker
 
-      - name: Build & Push Docker image to Artifact Registry
+      - name: Build & Push Dockerfile image to Artifact Registry
         run: |
           docker build -t gcr.io/$PROJECT_ID/$IMAGE_NAME .
           docker push gcr.io/$PROJECT_ID/$IMAGE_NAME
