--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ env:
   REGION: asia-northeast3
   SERVICE_NAME: mock-election
   IMAGE_NAME: spring-backend
+  REPOSITORY_NAME: spring-backend
 
 jobs:
   build-and-deploy:
@@ -28,7 +29,7 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      - name: Set up Dockerfile Buildx
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
       - name: Authenticate with Google Cloud
@@ -36,18 +37,18 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_CREDENTIALS }}
 
-      - name: Configure Dockerfile for Artifact Registry
+      - name: Configure Docker for Artifact Registry
         run: gcloud auth configure-docker
 
-      - name: Build & Push Dockerfile image to Artifact Registry
+      - name: Build & Push Docker image to Artifact Registry
         run: |
-          docker build -t gcr.io/$PROJECT_ID/$IMAGE_NAME .
-          docker push gcr.io/$PROJECT_ID/$IMAGE_NAME
+          docker build -t $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY_NAME/$IMAGE_NAME .
+          docker push $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY_NAME/$IMAGE_NAME
 
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy $SERVICE_NAME \
-            --image gcr.io/$PROJECT_ID/$IMAGE_NAME \
+            --image $REGION-docker.pkg.dev/$PROJECT_ID/$REPOSITORY_NAME/$IMAGE_NAME \
             --platform managed \
             --region $REGION \
             --allow-unauthenticated
