--- a/.gitignore
+++ b/.gitignore
@@ -40,6 +40,7 @@ build/
 src/main/resources/application.yml
 src/main/resources/application.properties
 src/main/resources/gcs-key.json
+gcs-key.json
 
 # MyBatis XML 컴파일 결과물
 *.xml~
