--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,6 +29,10 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
+      - name: Create GCS Key JSON file
+        run: |
+          echo "${{ secrets.GCS_KEY_JSON }}" > gcs-key.json
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
@@ -48,8 +52,8 @@ jobs:
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy $SERVICE_NAME \
-           --image asia-northeast3-docker.pkg.dev/$PROJECT_ID/$REPOSITORY_NAME/$IMAGE_NAME \
-           --platform managed \
-           --region $REGION \
-           --allow-unauthenticated \
-           --set-env-vars jwt.secret=votingAppSecretKey1234567890123456789012345678901234567890123456789012345678901234567890,jwt.expiration=86400000
+            --image asia-northeast3-docker.pkg.dev/$PROJECT_ID/$REPOSITORY_NAME/$IMAGE_NAME \
+            --platform managed \
+            --region $REGION \
+            --allow-unauthenticated \
+            --set-env-vars jwt.secret=votingAppSecretKey1234567890123456789012345678901234567890123456789012345678901234567890,jwt.expiration=86400000
