--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,4 +56,4 @@ jobs:
             --platform managed \
             --region $REGION \
             --allow-unauthenticated \
-            --set-env-vars jwt.secret=votingAppSecretKey1234567890123456789012345678901234567890123456789012345678901234567890,jwt.expiration=86400000
+            --set-env-vars jwt.secret=votingAppSecretKey1234567890123456789012345678901234567890123456789012345678901234567890,jwt.expiration=86400000,GOOGLE_APPLICATION_CREDENTIALS=/workspace/gcs-key.json
