--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,4 +56,10 @@ jobs:
             --platform managed \
             --region $REGION \
             --allow-unauthenticated \
-            --set-env-vars jwt.secret=votingAppSecretKey1234567890123456789012345678901234567890123456789012345678901234567890,jwt.expiration=86400000,GOOGLE_APPLICATION_CREDENTIALS=/workspace/gcs-key.json
+            --set-env-vars jwt.secret=votingAppSecretKey1234567890123456789012345678901234567890123456789012345678901234567890, \
+                           jwt.expiration=86400000, \
+                           GOOGLE_APPLICATION_CREDENTIALS=/workspace/gcs-key.json, \
+                           spring.datasource.url=jdbc:mysql://13.124.42.229:3306/visionvote?serverTimezone=UTC&characterEncoding=UTF-8, \
+                           spring.datasource.username=project3, \
+                           spring.datasource.password=project3, \
+                           spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
