--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,8 +30,7 @@ jobs:
         run: mvn clean package -DskipTests
 
       - name: Create GCS Key JSON file
-        run: |
-          echo "${{ secrets.GCS_KEY_JSON }}" > gcs-key.json
+        run: echo "${{ secrets.GCS_KEY_JSON }}" > gcs-key.json
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -56,5 +55,4 @@ jobs:
             --platform managed \
             --region $REGION \
             --allow-unauthenticated \
-            --set-env-vars jwt.secret=votingAppSecretKey1234567890123456789012345678901234567890123456789012345678901234567890,jwt.expiration=86400000,GOOGLE_APPLICATION_CREDENTIALS=/workspace/gcs-key.json,spring.datasource.url=jdbc:mysql://13.124.42.229:3306/visionvote?serverTimezone=UTC&characterEncoding=UTF-8,spring.datasource.username=project3,spring.datasource.password=project3,spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-     
+            --set-env-vars jwt.secret=votingAppSecretKey1234567890123456789012345678901234567890123456789012345678901234567890,jwt.expiration=86400000,GOOGLE_APPLICATION_CREDENTIALS=/workspace/gcs-key.json,spring.datasource.url=jdbc:mysql://13.124.42.229:3306/visionvote?serverTimezone=UTC&characterEncoding=UTF-8,spring.datasource.username=project3,spring.datasource.password=project3,spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver,oauth2.google.client-id=${{ secrets.OAUTH2_GOOGLE_CLIENT_ID }},oauth2.google.client-secret=${{ secrets.OAUTH2_GOOGLE_CLIENT_SECRET }},oauth2.google.redirect-uri=${{ secrets.OAUTH2_GOOGLE_REDIRECT_URI }}
