--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,8 +29,8 @@ jobs:
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
-      - name: Create GCS Key JSON file
-        run: echo "${{ secrets.GCS_KEY_JSON }}" > src/main/resources/gcs-key.json
+      - name: Decode GCS Key from base64
+        run: echo "${{ secrets.GCS_KEY_JSON_BASE64 }}" | base64 -d > gcs-key.json
 
 
       - name: Set up Docker Buildx
@@ -56,4 +56,4 @@ jobs:
             --platform managed \
             --region $REGION \
             --allow-unauthenticated \
-            --set-env-vars="JWT_SECRET=votingAppSecretKey1234567890123456789012345678901234567890123456789012345678901234567890,JWT_EXPIRATION=86400000,GOOGLE_APPLICATION_CREDENTIALS=/workspace/gcs-key.json,SPRING_DATASOURCE_URL=jdbc:mysql://13.124.42.229:3306/visionvote?serverTimezone=UTC&characterEncoding=UTF-8,SPRING_DATASOURCE_USERNAME=project3,SPRING_DATASOURCE_PASSWORD=project3,SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver,OAUTH2_GOOGLE_CLIENT_ID=${{ secrets.OAUTH2_GOOGLE_CLIENT_ID }},OAUTH2_GOOGLE_CLIENT_SECRET=${{ secrets.OAUTH2_GOOGLE_CLIENT_SECRET }},OAUTH2_GOOGLE_REDIRECT_URI=${{ secrets.OAUTH2_GOOGLE_REDIRECT_URI }},gcs.key.location=gcs-key.json"
+            --set-env-vars="JWT_SECRET=votingAppSecretKey1234567890123456789012345678901234567890123456789012345678901234567890,JWT_EXPIRATION=86400000,GOOGLE_APPLICATION_CREDENTIALS=/workspace/gcs-key.json,SPRING_DATASOURCE_URL=jdbc:mysql://13.124.42.229:3306/visionvote?serverTimezone=UTC&characterEncoding=UTF-8,SPRING_DATASOURCE_USERNAME=project3,SPRING_DATASOURCE_PASSWORD=project3,SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver,OAUTH2_GOOGLE_CLIENT_ID=${{ secrets.OAUTH2_GOOGLE_CLIENT_ID }},OAUTH2_GOOGLE_CLIENT_SECRET=${{ secrets.OAUTH2_GOOGLE_CLIENT_SECRET }},OAUTH2_GOOGLE_REDIRECT_URI=${{ secrets.OAUTH2_GOOGLE_REDIRECT_URI }}"
