--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
         run: mvn clean package -DskipTests
 
       - name: Decode GCS Key from base64
-        run: echo "${{ secrets.GCS_KEY_JSON_BASE64 }}" | base64 -d > gcs-key.json
+        run: echo "${{ secrets.GCS_KEY_JSON_BASE64 }}" | base64 -d > /workspace/gcs-key.json
 
 
       - name: Set up Docker Buildx
