--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,12 @@
 			<version>2.44.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>com.google.api</groupId>
+			<artifactId>gax</artifactId>
+			<version>2.48.0</version>
+		</dependency>
+
 		<!-- MapStruct core -->
 		<dependency>
 			<groupId>org.mapstruct</groupId>
