--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,6 +26,11 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
+      - name: Restore application.properties from GitHub Secret
+        run: |
+          mkdir -p src/main/resources
+          echo "${{ secrets.APP_PROPERTIES_BASE64 }}" | tr -d '\n' | base64 -d > src/main/resources/application.properties
+
       - name: Build with Maven
         run: mvn clean package -DskipTests
 
@@ -51,5 +56,4 @@ jobs:
             --image asia-northeast3-docker.pkg.dev/$PROJECT_ID/$REPOSITORY_NAME/$IMAGE_NAME \
             --platform managed \
             --region $REGION \
-            --allow-unauthenticated \
-            --set-env-vars="JWT_SECRET=votingAppSecretKey1234567890123456789012345678901234567890123456789012345678901234567890,JWT_EXPIRATION=86400000,SPRING_DATASOURCE_URL=jdbc:mysql://13.124.42.229:3306/visionvote?serverTimezone=UTC&characterEncoding=UTF-8,SPRING_DATASOURCE_USERNAME=project3,SPRING_DATASOURCE_PASSWORD=project3,SPRING_DATASOURCE_DRIVER_CLASS_NAME=com.mysql.cj.jdbc.Driver,OAUTH2_GOOGLE_CLIENT_ID=${{ secrets.OAUTH2_GOOGLE_CLIENT_ID }},OAUTH2_GOOGLE_CLIENT_SECRET=${{ secrets.OAUTH2_GOOGLE_CLIENT_SECRET }},OAUTH2_GOOGLE_REDIRECT_URI=${{ secrets.OAUTH2_GOOGLE_REDIRECT_URI }}"
+            --allow-unauthenticated
