--- a/pom.xml
+++ b/pom.xml
@@ -204,6 +204,17 @@
 			<version>${web3j.version}</version>
 		</dependency>
 
+		<!--Spring WebFlux-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-webflux</artifactId>
+		</dependency>
+		<!--	Gson	-->
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.10.1</version>
+		</dependency>
 	</dependencies>
 
 	<build>
